Add a couple more email addresses
These weren't as readily displayed as the others were, but was able to
track them down. The remaining names don't seem to publish their
email and, instead, use a web form.

--- a/templates/letters/20200602.html
+++ b/templates/letters/20200602.html
@@ -55,6 +55,7 @@
   <table class="repcard">
     <tr><th>Cyrus Habib</th></tr>
     <tr><td>Lieutenant Governor - Washington</td></tr>
+    <tr><td>ltgov@ltgov.wa.gov</td></tr>
     <tr><td>360-786-7700</td></tr>
   </table>
   <table class="repcard">
@@ -78,6 +79,7 @@
   <table class="repcard">
     <tr><th>Kim Wyman</th></tr>
     <tr><td>Secretary of State - Washington</td></tr>
+    <tr><td>secretaryofstate@sos.wa.gov</td></tr>
     <tr><td>360-902-4151</td></tr>
   </table>
   <table class="repcard">
