Add HomeCooking Twitter tag to food link
Since I stopped doing Hello Fresh, there's a new tag for things I'm
making these days. Just like when I switched from Plated to Hello Fresh.

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -64,7 +64,7 @@ div#statsbanner table#stats ul {
         <th>Hobbies</th><td>
           <ul>
             <li>Hiking (generally around <a href="https://goo.gl/maps/Lt1fCEZP1dxY9eTb9">Mount Si</a>)</li>
-            <li><a href="https://twitter.com/search?q=(%23platedpics%20OR%20%23hellofreshpics)%20(from%3Abrwyatt)">Cooking</a></li>
+            <li><a href="https://twitter.com/search?q=(%23platedpics%20OR%20%23hellofreshpics%20OR%20%23homecooking)%20(from%3Abrwyatt)">Cooking</a></li>
             <li>Programming and Server Automation (See: <a href="/projects">Projects</a>)</li>
             <li>Home automation</li>
             <li>Board games</li>
